--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "nodemailer": "^4.6.4",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
   },
