--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "progressbar.js": "^1.0.1",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
