--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "handlebars-dateformat": "^1.1.1",
     "hbs": "~4.0.1",
     "mongoose": "~5.4.7",
     "morgan": "~1.9.0",
