--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars-dateformat": "^1.1.1",
     "handlebars-helpers": "^0.10.0",
     "hbs": "~4.0.1",
+    "heroku-ssl-redirect": "0.0.4",
     "mongoose": "~5.4.7",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
