--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "progressbar.js": "^1.0.1",
-    "serve-favicon": "~2.5.0"
+    "serve-favicon": "~2.5.0",
+    "tableexport": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
